# dash-router

./: .gitignore  AGENTS.md  README.md  app.py  appshell.py  pyproject.toml  pyrightconfig.json  responseoutput.txt  test.py  thaughts.md
assets/: styles.css
pages/: page.py
pages/_analytics/risk/: page.py
pages/_ongoing_monitoring/overview/: page.py
pages/ongoing_monitoring/checks/: page.py
pages/ongoing_monitoring/history/: page.py
pages/ongoing_monitoring/overview/: page.py
pages/sales/: page.py
pages/sales/analytics/: page.py
pages/sales/invoices/: page.py
pages/sales/invoices/(invoice)/: page.py
pages/sales/invoices/(invoice)/_components/: figures.py  tabs.py
pages/sales/invoices/(overview)/: page.py
pages/sales/invoices/_components/: figures.py  table.py
pages/sales/overview/: page.py
router/: _utils.py  components.py  models.py  router.py
src/: __init__.py
src/dash_router/: __init__.py  _utils.py  _validation.py  components.py  models.py  router.py  sync_router.py
src/dash_router/core/: context.py  execution.py  execution_node.py  execution_tree.py  loading_state.py  query_params.py  route_node.py  route_table.py  route_tree.py  routing.py  routing_context.py
src/dash_router/utils/: constants.py  helper_functions.py
src/flash_router/: _validation.py  components.py  navigation.py  router.py  types.py
src/flash_router/core/: __init__.py  context.py  execution.py  query_params.py  routing.py  streaming.py
src/flash_router/utils/: helper_functions.py
tests/: TEST_PLAN.md  components.py  conftest.py  test_app.py  test_execution.py  test_loading_state.py  test_router.py  test_routing_context.py  test_streaming_queue.py
tests/assets/: clientside.js  style.css
tests/pages/: components.py  page.py
tests/pages/files/: page.py
tests/pages/files/[__rest]/: default.py  page.py
tests/pages/nested_route/: page.py
tests/pages/nested_route/(slot_1)/: page.py
tests/pages/nested_route/(slot_2)/: page.py
tests/pages/nested_route/child_1/: page.py
tests/pages/nested_route/child_2/: page.py
tests/pages/nested_route/child_3/: page.py
tests/pages/projects/: page.py
tests/pages/projects/[team_id]/: default.py  page.py
tests/pages/sales/: page.py
tests/pages/sales/analytics/: page.py
tests/pages/sales/dashboard/: page.py
tests/pages/sales/invoices/: page.py
tests/pages/sales/overview/: page.py
tests/pages/tickets/: page.py
tests/pages/tickets/[ticket_id]/: page.py
tests/unit_tests/: conftest.py  test_catch_all.py  test_slots_nested_routes.py
tests/utils/: helpers.py  route_table.json  route_tree.json
(+43 files in other folders)
