[tool.poetry]
name = "dash-router"
version = "0.1.0"
description = ""
authors = ["Christian Giessel <cgiessel@tesla.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dash-mantine-components = "1.0.0rc1"
pydantic = "^2.10.4"
dash = "3.0.0rc1"
dash-iconify = "^0.1.2"
dash-flash = {path = "/Users/cgiessel/Documents/projects/flash/flash-package/dist/dash_flash-0.1.2rc1.tar.gz"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
