[tool.poetry]
name = "flash-router"
version = "0.1.0-beta.3"
description = "File-system based router for Dash and Flash applications."
authors = ["chgiesse"]
repository = "https://github.com/chgiesse/dash-router"
license = "MIT"
readme = "README.md"
packages = [
  { include = "dash_router", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.10.4"
dash = "^3.0.0rc1"
dash-flash = {path = "/Users/cgiessel/Documents/projects/flash/flash-package/dist/dash_flash-0.1.2rc2.tar.gz"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
